chore: add README.md

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ ORIGIN="http://localhost:5173"
 # For production use 32 characters and generated with high entropy
 # https://www.better-auth.com/docs/installation
 BETTER_AUTH_SECRET=""
+
+# Auth
+ADMIN_EMAIL=
+ADMIN_PASSWORD=
