--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@fontsource/inter": "^5.2.8",
 		"@fontsource/plus-jakarta-sans": "^5.2.8",
 		"@lucide/svelte": "^0.574.0",
+		"@svelte-put/qr": "^2.1.1",
 		"@sveltejs/adapter-node": "^5.5.3",
 		"postgres": "^3.4.8"
 	}
